--- a/cycle-view-pager-example/build.gradle
+++ b/cycle-view-pager-example/build.gradle
@@ -21,8 +21,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'me.codeboy.android:cycle-view-pager:2.0.0'
-//    compile project(':cycle-view-pager')
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile project(':cycle-view-pager')
 }
