--- a/cycle-view-pager-example/src/main/AndroidManifest.xml
+++ b/cycle-view-pager-example/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/example_cycleviewpager_icon"
-        android:label="@string/cycle_view_pager_app_name"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name="me.codeboy.android.cycleviewpager.example.example.NoCycleTextView"
